# cyber-watchdog

./: CMakeLists.txt  LICENSE  README.md  main.cpp  readme
config/: watchdog.conf.example
docs/: BOOT_CHAIN.md  LANGUAGES.md  PLUGINS.md
hooks/dracut/: module-setup.sh  start-watchdog.sh
hooks/initramfs-tools/: hook  script
hooks/mkinitcpio/: hook  install
lang/asm/: Makefile  heartbeat.asm
lang/c/: Makefile  panic_logger.c
lang/rust/: Cargo.toml
lang/rust/src/: main.rs
plugins/api/: plugin_api.h
plugins/available/: example_cpu_alert.c
scripts/: plugin-mgr.sh
src/: main.cpp
src/core/: log.h  types.h  util.h
systemd/: cyber-watchdog-initrd.service  cyber-watchdog.service
tests/: test_basic.sh
